adding doc references to the comments

--- a/.github/workflows/ghas-feature-checker.yml
+++ b/.github/workflows/ghas-feature-checker.yml
@@ -1,8 +1,12 @@
 
 # This workflow is designed to run on demand only.
 # See the repos API for more information: https://docs.github.com/en/rest/repos/repos?apiVersion=2022-11-28
+#
 # A repository secret named GH_PAT is required to run this workflow. It must have the "security_events" read permission.
+# For creating your personal access token, see:" https://docs.github.com/en/authentication/keeping-your-account-and-data-secure/managing-your-personal-access-tokens#creating-a-personal-access-token-classic"
+#
 # If any check fails, the workflow will exit with a non-zero status.
+#
 name: "Check Security Features"
 
 on:
